add style to error page 404 and 500

--- a/public/404.html
+++ b/public/404.html
@@ -4,64 +4,171 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
+    @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
+    .error-container {
+      text-align: center;
+      font-size: 106px;
+      font-family: 'Catamaran', sans-serif;
+      font-weight: 800;
+      margin: 70px 15px;
+    }
+    .error-container > span {
+      display: inline-block;
+      position: relative;
+    }
+    .error-container > span.four {
+      width: 136px;
+      height: 43px;
+      border-radius: 999px;
+      background:
+        linear-gradient(140deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 43%, transparent 44%, transparent 100%),
+        linear-gradient(105deg, transparent 0%, transparent 40%, rgba(0, 0, 0, 0.06) 41%, rgba(0, 0, 0, 0.07) 76%, transparent 77%, transparent 100%),
+        linear-gradient(to right, #38E1ED, #3734AA);
+    }
+    .error-container > span.four:before,
+    .error-container > span.four:after {
+      content: '';
+      display: block;
+      position: absolute;
+      border-radius: 999px;
+    }
+    .error-container > span.four:before {
+      width: 43px;
+      height: 156px;
+      left: 60px;
+      bottom: -43px;
+      background:
+        linear-gradient(128deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 40%, transparent 41%, transparent 100%),
+        linear-gradient(116deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 50%, transparent 51%, transparent 100%),
+        linear-gradient(to top, #3734AA, #167FFB, #38E1ED);
+    }
+    .error-container > span.four:after {
+      width: 137px;
+      height: 43px;
+      transform: rotate(-49.5deg);
+      left: -18px;
+      bottom: 36px;
+      background: linear-gradient(to right, #3734AA, #167FFB, #38E1ED);
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .error-container > span.zero {
+      vertical-align: text-top;
+      width: 156px;
+      height: 156px;
+      border-radius: 999px;
+      background: linear-gradient(-45deg, transparent 0%, rgba(0, 0, 0, 0.06) 50%,  transparent 51%, transparent 100%),
+        linear-gradient(to top right, #3734AA, #167FFB, #38E1ED);
+      overflow: hidden;
+      animation: bgshadow 5s infinite;
+    }
+    .error-container > span.zero:before {
+      content: '';
+      display: block;
+      position: absolute;
+      transform: rotate(45deg);
+      width: 90px;
+      height: 90px;
+      background-color: transparent;
+      left: 0px;
+      bottom: 0px;
+      background:
+        linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%),
+        linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
+    }
+    .error-container > span.zero:after {
+      content: '';
+      display: block;
+      position: absolute;
+      border-radius: 999px;
+      width: 70px;
+      height: 70px;
+      left: 43px;
+      bottom: 43px;
+      background: #FDFAF5;
+      box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .screen-reader-text {
+        position: absolute;
+        top: -9999em;
+        left: -9999em;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    @keyframes bgshadow {
+      0% {
+        box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
+      }
+      45% {
+        box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+      }
+      55% {
+        box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+      }
+      100% {
+        box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
+      }
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    /* demo stuff */
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    body {
+      background-color: #E8F2FF;
+      margin-bottom: 50px;
+    }
+    html, button, input, select, textarea {
+        font-family: 'Montserrat', Helvetica, sans-serif;
+        color: #061433;
+    }
+    h1.zoom-area {
+      text-align: center;
+      margin: 30px auto;
+      font-size: 28px;
+    }
+    .zoom-area {
+      max-width: 650px;
+      margin: 30px auto 30px;
+      font-size: 19px;
+      text-align: center;
+    }
+    .link-container {
+      text-align: center;
+    }
+    a.more-link {
+      text-transform: uppercase;
+      font-size: 14px;
+        background-color: #3734AA;
+        padding: 10px 15px;
+        border-radius: 10px;
+        color: #fff;
+        display: inline-block;
+        margin-right: 5px;
+        margin-bottom: 5px;
+        line-height: 1.5;
+        text-decoration: none;
+      margin-top: 50px;
+      letter-spacing: 1px;
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+  <section class="error-container">
+    <span class="four"><span class="screen-reader-text">4</span></span>
+    <span class="zero"><span class="screen-reader-text">0</span></span>
+    <span class="four"><span class="screen-reader-text">4</span></span>
+  </section>
+  <h1 class="zoom-area">The page you are looking for does not exist.</h1>
+  <p class="zoom-area">You may have mistyped the address or the page may have moved.</p>
+  <p class="zoom-area">Please try again.</p>
+
+  <div class="link-container">
+    <a target="_blank" href="http://www.bloomcommunity.site/" class="more-link">Back to home page</a>
   </div>
 </body>
 </html>
